Update swagger and change to rateFromCache
